force-app/main/default/objects/Tagging__c/Tagging__c.object-meta.xml
<CustomObject>
    <label>Tagging</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tagging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taggings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>