force-app/main/default/objects/Tagging__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>