force-app/main/default/objects/Tagging__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Taggings</relationshipLabel>
    <relationshipName>Taggings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>