force-app/main/default/objects/Tagging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sObject_Type__c</columns>
    <columns>Tag__c</columns>
    <columns>Record_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>